Enabled calendar. Fixed alignment and issue where calendar would load with no events.

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -13,13 +13,6 @@ h1 {
   color: #13294b;
 }
 
-.calendar{
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
 .interview-list {
   margin-left: auto;
   margin-right: auto;
